turtlebot3_ws/log/build_2022-09-04_21-05-27/pkg_laser/stderr.log
  File "/home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser/movement.py", line 234
    if(random.randint(1, 10000) % 4 == 0)
                                        ^
SyntaxError: invalid syntax

